--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -32,7 +32,7 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 ---
 # Conditional Variational Autoencoder with Adversarial Learning for End-to-End Text-to-Speech
 
-[Jaehyeon Kim](../../Papers/Authors/Jaehyeon_Kim.md) [Jungil Kong](../../Papers/Authors/Jungil_Kong.md) [Juhee Son](../../Papers/Authors/Juhee_Son.md) 
+[Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md) [Jungil Kong](../../Authors/Jungil_Kong.md) [Juhee Son](../../Authors/Juhee_Son.md) 
 
 ## Abstract·摘要
 
@@ -67,7 +67,7 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 > In the text-to-spectrogram generation step, extracting attention maps from pre-trained autoregressive teacher networks ([FastSpeech (2019)](../../Papers/2019.05_FastSpeech/2019.05_FastSpeech.md); [ParaNet]()) is attempted to decrease the difficulty of learning alignments between text and spectrograms.
 > More recently, likelihood-based methods further eliminate the dependency on external aligners by estimating or learning alignments that maximize the likelihood of target mel-spectrograms ([AlignTTS (2020)](../../Papers/2020.03_AlignTTS/2020.03_AlignTTS.md); [Flow-TTS (2020)](../../Papers/2020.05_Flow-TTS/2020.05_Flow-TTS.md); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md)).
 > Meanwhile, [Generative Adversarial Networks (GANs)]() have been explored in second stage models.
-> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../AV2_Vocoder/2019.10_MelGAN.md); [GAN-TTS (2019)](../2019.09_GAN-TTS/2../../Papers/2019.09_GAN-TTS/2019.09_GAN-TTS.md(../Vocoder/2020.10_HiFi-GAN.md)).
+> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../AV2_Vocoder/2019.10.08_MelGAN.md); [GAN-TTS (2019)](../2019.09_GAN-TTS/2../../Papers/2019.09_GAN-TTS/2019.09_GAN-TTS.md(../Vocoder/2020.10_HiFi-GAN.md)).
 
 基于神经网络的文本转语音系统已经展示了合成真实语音的能力, 但它们的顺序生成过程使得它们难以充分利用现代并行处理器.
 为了克服这一限制并提升合成速度, 已经有数种非自回归方法被提出.
@@ -78,12 +78,12 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 
 > Despite the progress of parallel TTS systems, two-stage pipelines remain problematic because they require sequential training or fine-tuning ([Tacotron2 (2017)](../AV1_Acoustic/2017.12_Tacotron2.md); [Wave-Tacotron (2020)](../2020.11_Wave-Tacotron/2020.11_Wave-Tacotron.md)) for high-quality production wherein latter stage models are trained with the generated samples of earlier stage models.
 > In addition, their dependency on predefined intermediate features precludes applying learned hidden representations to obtain further improvements in performance.
-> Recently, several works, i.e., [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md) and [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
+> Recently, several works, i.e., [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) and [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
 > However, despite potentially improving performance by utilizing the learned representations, their synthesis quality lags behind two-stage systems.
 
 尽管并行文本转语音系统取得了进展, 但两阶段方案仍然存在问题. 因为它们要求顺序训练或微调以获取高质量结果, 即后一阶段的模型需要在前一阶段模型的生成样本上进行训练.
 此外, 他们依赖于预定义的中间特征限制了将学习到的隐藏表示以获得进一步的性能提升.
-近期, 有几项工作如 [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md) 和 EATS 提出了高效的端到端训练方法, 如训练于较短的音频片段而不是完整波形, 利用梅尔频谱图解码器辅助文本表示学习, 并设计专门的频谱图损失以松弛目标和生成语音的长度不匹配.
+近期, 有几项工作如 [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) 和 EATS 提出了高效的端到端训练方法, 如训练于较短的音频片段而不是完整波形, 利用梅尔频谱图解码器辅助文本表示学习, 并设计专门的频谱图损失以松弛目标和生成语音的长度不匹配.
 然而, 尽管利用学习到的表示可以提升性能, 但它们的合成质量仍然落后于两阶段系统.
 
 > In this work, we present a parallel end-to-end TTS method that generates more natural sounding audio than current two-stage models. 
@@ -120,7 +120,7 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 他们还无法利用端到端方法的潜在优势, 即可以利用学习到的隐藏表示而非预定义的中间特征.
 
 > Recently, single-stage end-to-end TTS models have been proposed to tackle the more challenging task of generating raw waveforms, which contain richer information (e.g., high-frequency response and phase) than mel-spectrograms, directly from text.
-> [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
+> [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
 > However, to resolve the one-to-many problem, FastSpeech 2s must extract phoneme duration, pitch, and energy from speech used as input conditions in training.
 > [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md) employs adversarial training as well and a differentiable alignment scheme.
 > To resolve the length mismatch problem between generated and target speech, EATS adopts soft dynamic time warping loss that is calculated by dynamic programming.
@@ -179,7 +179,7 @@ Rezende, Chen, Ziegler 通过使用标准化流增强先验和后验分布表现
 ### 2.3.Duration Prediction in Non-Autoregressive Text-to-Speech·非自回归文本转语音中的时长预测
 
 > Autoregressive TTS models ([VoiceLoop (2017.07)](../2017.07_VoiceLoop/2017.07_VoiceLoop.md); [Tacotron../Acoustic/2017.12_Tacotron2.mdcotron2.md); [Flowtron (2021)](../2020.05../../Papers/2020.05_Flowtron/2020.05_Flowtron.mde diverse speech with different rhythms through their autoregressive structure and several tricks including maintaining dropout probability during inference and priming ([Generating sequences with recurrent neural networks]()).
-> Parallel TTS models ([FastSpeech (2019)](../AV1_Acoustic/2019.05_FastSpeech.md); [ParaNet (2020)](); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md); [FastSpeech 2s (2020)](../../Papers/2019.05../Acoustic/2020.06_FastSpeech2.md(../2021.01_BVAE-TTS/2021.01_BVAE-TTS.md)), on the other hand, have been relied on deterministic duration prediction.
+> Parallel TTS models ([FastSpeech (2019)](../AV1_Acoustic/2019.05.22_FastSpeech.md); [ParaNet (2020)](); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md); [FastSpeech 2s (2020)](../../Papers/2019.05../Acoustic/2020.06_FastSpeech2.md(../2021.01_BVAE-TTS/2021.01_BVAE-TTS.md)), on the other hand, have been relied on deterministic duration prediction.
 > It is because parallel models have to predict target phoneme duration or the total length of target speech in one feed-forward path, which makes it hard to capture the correlated joint distribution of speech rhythms.
 > In this work, we suggest a flow-based stochastic duration predictor that learns the joint distribution of the estimated phoneme duration, resulting in the generation of diverse speech rhythms in parallel.
 
@@ -248,7 +248,7 @@ $$
 > We define the reconstruction loss in the mel-spectrogram domain to improve the perceptual quality by using a mel-scale that approximates the response of the human auditory system. 
 > Note that the mel-spectrogram estimation from a raw waveform does not require trainable parameters as it only uses STFT and linear projection onto the mel-scale. 
 > Furthermore, the estimation is only employed during training, not inference. 
-> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)).
+> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)).
 
 我们在梅尔频谱域中定义了重构损失, 以提高感知质量, 因为它使用一个近似人类听觉系统响应的梅尔刻度.
 注意, 从原始波形估计梅尔频谱不需要可训练参数, 因为它只使用短时傅里叶变换和线性投影到梅尔刻度.
@@ -390,7 +390,7 @@ return path
 #### 3.2.2.Duration Prediction from Text·文本中的时长预测
 
 > We can calculate the duration of each input token $d_i$ by summing all the columns in each row of the estimated alignment $\sum_j A_{i,j}$. 
-> The duration could be used to train a deterministic duration predictor, as proposed in previous work ([HiFi-GAN (2020)](../AV2_Vocoder/2020.10_HiFi-GAN.md)), but it cannot express the way a person utters at different speaking rates each time. 
+> The duration could be used to train a deterministic duration predictor, as proposed in previous work ([HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md)), but it cannot express the way a person utters at different speaking rates each time. 
 > To generate human-like rhythms of speech, we design a stochastic duration predictor so that its samples follow the duration distribution of given phonemes. 
 > The stochastic duration predictor is a flow-based generative model that is typically trained via maximum likelihood estimation.
 > The direct application of maximum likelihood estimation, however, is difficult because the duration of each input phoneme is 
@@ -646,7 +646,7 @@ class ResidualCouplingBlock(nn.Module):
 
 #### 3.5.3.Decoder·解码器
 
-> The decoder is essentially the [HiFi-GAN (2020)](../AV2_Vocoder/2020.10_HiFi-GAN.md) V1 generator.
+> The decoder is essentially the [HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md) V1 generator.
 > It is composed of a stack of transposed convolutions, each of which is followed by a multi-receptive field fusion module (MRF).
 > The output of the MRF is the sum of the output of residual blocks that have different receptive field sizes.
 > For the multi-speaker setting, we add a linear layer that transforms speaker embedding and add it to the input latent variables $z$.
@@ -720,8 +720,8 @@ class Generator(torch.nn.Module):
 
 #### 3.5.4.Discriminator·判别器
 
-> We follow the discriminator architecture of the multi-period discriminator proposed in [HiFi-GAN (2020)](../AV2_Vocoder/2020.10_HiFi-GAN.md).
-> The multi-period discriminator is a mixture of Markovian window-based sub-discriminators ([MelGAN (2019)](../AV2_Vocoder/2019.10_MelGAN.md)), each of which operates on different periodic patterns of input waveforms.
+> We follow the discriminator architecture of the multi-period discriminator proposed in [HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md).
+> The multi-period discriminator is a mixture of Markovian window-based sub-discriminators ([MelGAN (2019)](../AV2_Vocoder/2019.10.08_MelGAN.md)), each of which operates on different periodic patterns of input waveforms.
 
 我们遵循 HiFi-GAN 提出的多周期判别器的架构.
 多周期判别器是一个由马尔可夫窗口子判别器组成的混合模型, 它们分别操作于输入波形的不同周期模式.
@@ -866,7 +866,7 @@ class StochasticDurationPredictor(nn.Module):
 ### 4.1.Datasets·数据集
 
 > We conducted experiments on two different datasets.
-> We used the [LJ Speech dataset](../../Papers/Datasets/LJSpeech.md) for comparison with other publicly available models and the [VCTK dataset](../Datasets/VCTK.md) to verify whether our model can learn and express diverse speech characteristics.
+> We used the [LJ Speech dataset](../../Datasets/LJSpeech.md) for comparison with other publicly available models and the [VCTK dataset](../Datasets/VCTK.md) to verify whether our model can learn and express diverse speech characteristics.
 > The LJ Speech dataset consists of 13,100 short audio clips of a single speaker with a total length of approximately 24 hours.
 > The audio format is 16-bit PCM with a sample rate of 22 kHz, and we used it without any manipulation.
 > We randomly split the dataset into a training set (12,500 samples), validation set (100 samples), and test set (500 samples).
@@ -906,7 +906,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 
 > The networks are trained using the [AdamW optimizer](../Optimizers/2017.11_AdamW.md) with $\beta_1= 0.8$, $\beta_2=0.99$ and weight decay $\lambda = 0.01$.
 > The learning rate decay is scheduled by a 0.9991/8 factor in every epoch with an initial learning rate of $2\times 10^{−4}$.
-> Following previous work ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)), we adopt the windowed generator training, a method of generating only a part of raw waveforms to reduce the training time and memory usage during training.
+> Following previous work ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)), we adopt the windowed generator training, a method of generating only a part of raw waveforms to reduce the training time and memory usage during training.
 > We randomly extract segments of latent representations with a window size of 32 to feed to the decoder instead of feeding entire latent representations and also extract the corresponding audio segments from the ground truth raw waveforms as training targets.
 > We use mixed precision training on 4 NVIDIA V100 GPUs.
 > The batch size is set to 64 per GPU and the model is trained up to 800k steps.
