--- a/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
+++ b/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
@@ -651,13 +651,16 @@ $$
 
 由于判别器是 MPD 和 MSD 的子判别器集合, 这两个式子可以分别转换为关于子判别器的形式:
 
+```
 $$
-  \mathcal{L}_G = \sum_{k=1}^K [\mathcal{L}_{Adv}(G;D_k)+\lambda_{fm} \mathcal{L}_{FM}(G;D_k)] + \lambda_{mel}\mathcal{L}_{Mel}(G)
+  \mathcal{L}_{G} = \sum_{k=1}^K [\mathcal{L}_{Adv}(G;D_k)+\lambda_{fm} \mathcal{L}_{FM}(G;D_k)] + \lambda_{mel}\mathcal{L}_{Mel}(G)
 $$
-
+```
+```
 $$
-  \mathcal{L}_D = \sum_{k=1}^K [\mathcal{L}_{Adv}(D_k;G)]
+  \mathcal{L}_{D} = \sum_{k=1}^K [\mathcal{L}_{Adv}(D_k;G)]
 $$
+```
 
 其中 $D_{k}$ 表示 MPD 和 MSD 中的第 $k$ 个子判别器.
 
