--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -54,7 +54,7 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 
 > Text-to-speech (TTS) systems synthesize raw speech waveforms from given text through several components.
 > With the rapid development of deep neural networks, TTS system pipelines have been simplified to two-stage generative modeling apart from text preprocessing such as text normalization and phonemization.
-> The first stage is to produce intermediate speech representations such as mel-spectrograms ([Tacotron2 (2017)](../AV1_Acoustic/2017.12_Tacotron2.md)) or linguistic features (Oord et al., 2016) from the preprocessed text (Although there is a text preprocessing step in TTS systems, We herein use preprocessed text interchangeably with the word "text".), and the second stage is to generate raw waveforms conditioned on the intermediate representations (Oord et al., 2016; [WaveRNN (201../AV2_Vocoder/2018.02.23_WaveRNN.mdN.md)).
+> The first stage is to produce intermediate speech representations such as mel-spectrograms ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md)) or linguistic features (Oord et al., 2016) from the preprocessed text (Although there is a text preprocessing step in TTS systems, We herein use preprocessed text interchangeably with the word "text".), and the second stage is to generate raw waveforms conditioned on the intermediate representations ([WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md); [WaveRNN (2018)](../AV2_Vocoder/2018.02.23_WaveRNN.md)).
 > Models at each of the two-stage pipelines have been developed independently.
 
 文本转语音系统通过数个组件从给定的文本生成原始语音波形.
@@ -62,12 +62,12 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 第一阶段是生成中间语音表示如梅尔频谱图或来自预处理文本的语言特征, 第二阶段是根据中间表示生成原始波形.
 每个阶段的模型都单独建立.
 
-> Neural network-based autoregressive TTS systems have shown the capability of synthesizing realistic speech ([Tacotron2 (2017)](../AV1_Acoustic/2017.12_Tacotron2.md); [Transformer-TTS (2018)](../2018.09_Transform../../Papers/2018.09_Transformer_TTS/2018.09_Transformer_TTS.mdtial generative process makes it difficult to fully utilize modern parallel processors.
+> Neural network-based autoregressive TTS systems have shown the capability of synthesizing realistic speech ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS (2018)](../2018.09_Transform../../Papers/2018.09_Transformer_TTS/2018.09_Transformer_TTS.mdtial generative process makes it difficult to fully utilize modern parallel processors.
 > To overcome this limitation and improve synthesis speed, several non-autoregressive methods have been proposed.
 > In the text-to-spectrogram generation step, extracting attention maps from pre-trained autoregressive teacher networks ([FastSpeech (2019)](../../Papers/2019.05_FastSpeech/2019.05_FastSpeech.md); [ParaNet]()) is attempted to decrease the difficulty of learning alignments between text and spectrograms.
 > More recently, likelihood-based methods further eliminate the dependency on external aligners by estimating or learning alignments that maximize the likelihood of target mel-spectrograms ([AlignTTS (2020)](../../Papers/2020.03_AlignTTS/2020.03_AlignTTS.md); [Flow-TTS (2020)](../../Papers/2020.05_Flow-TTS/2020.05_Flow-TTS.md); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md)).
 > Meanwhile, [Generative Adversarial Networks (GANs)]() have been explored in second stage models.
-> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../AV2_Vocoder/2019.10.08_MelGAN.md); [GAN-TTS (2019)](../2019.09_GAN-TTS/2../../Papers/2019.09_GAN-TTS/2019.09_GAN-TTS.md(../Vocoder/2020.10_HiFi-GAN.md)).
+> GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis ([MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md); [GAN-TTS (2019)](../2019.09_GAN-TTS/2../../Papers/2019.09_GAN-TTS/2019.09_GAN-TTS.md(../Vocoder/2020.10_HiFi-GAN.md)).
 
 基于神经网络的文本转语音系统已经展示了合成真实语音的能力, 但它们的顺序生成过程使得它们难以充分利用现代并行处理器.
 为了克服这一限制并提升合成速度, 已经有数种非自回归方法被提出.
@@ -76,14 +76,14 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 同时, 生成对抗网络被用于第二阶模型.
 基于 GAN 的前馈网络具有多个判别器, 每个判别不同尺度或周期的样本, 实现高质量的原始波形合成.
 
-> Despite the progress of parallel TTS systems, two-stage pipelines remain problematic because they require sequential training or fine-tuning ([Tacotron2 (2017)](../AV1_Acoustic/2017.12_Tacotron2.md); [Wave-Tacotron (2020)](../2020.11_Wave-Tacotron/2020.11_Wave-Tacotron.md)) for high-quality production wherein latter stage models are trained with the generated samples of earlier stage models.
+> Despite the progress of parallel TTS systems, two-stage pipelines remain problematic because they require sequential training or fine-tuning ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Wave-Tacotron (2020)](../2020.11_Wave-Tacotron/2020.11_Wave-Tacotron.md)) for high-quality production wherein latter stage models are trained with the generated samples of earlier stage models.
 > In addition, their dependency on predefined intermediate features precludes applying learned hidden representations to obtain further improvements in performance.
-> Recently, several works, i.e., [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) and [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
+> Recently, several works, i.e., [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) and [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md), have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech. 
 > However, despite potentially improving performance by utilizing the learned representations, their synthesis quality lags behind two-stage systems.
 
 尽管并行文本转语音系统取得了进展, 但两阶段方案仍然存在问题. 因为它们要求顺序训练或微调以获取高质量结果, 即后一阶段的模型需要在前一阶段模型的生成样本上进行训练.
 此外, 他们依赖于预定义的中间特征限制了将学习到的隐藏表示以获得进一步的性能提升.
-近期, 有几项工作如 [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) 和 EATS 提出了高效的端到端训练方法, 如训练于较短的音频片段而不是完整波形, 利用梅尔频谱图解码器辅助文本表示学习, 并设计专门的频谱图损失以松弛目标和生成语音的长度不匹配.
+近期, 有几项工作如 [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) 和 EATS 提出了高效的端到端训练方法, 如训练于较短的音频片段而不是完整波形, 利用梅尔频谱图解码器辅助文本表示学习, 并设计专门的频谱图损失以松弛目标和生成语音的长度不匹配.
 然而, 尽管利用学习到的表示可以提升性能, 但它们的合成质量仍然落后于两阶段系统.
 
 > In this work, we present a parallel end-to-end TTS method that generates more natural sounding audio than current two-stage models. 
@@ -120,7 +120,7 @@ Demo: https://jaywalnut310.github.io/vits-demo/index.html
 他们还无法利用端到端方法的潜在优势, 即可以利用学习到的隐藏表示而非预定义的中间特征.
 
 > Recently, single-stage end-to-end TTS models have been proposed to tackle the more challenging task of generating raw waveforms, which contain richer information (e.g., high-frequency response and phase) than mel-spectrograms, directly from text.
-> [FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
+> [FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) is an extension of FastSpeech 2 that enables end-to-end parallel generation by adopting adversarial training and an auxiliary mel-spectrogram decoder that helps learn text representations.
 > However, to resolve the one-to-many problem, FastSpeech 2s must extract phoneme duration, pitch, and energy from speech used as input conditions in training.
 > [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md) employs adversarial training as well and a differentiable alignment scheme.
 > To resolve the length mismatch problem between generated and target speech, EATS adopts soft dynamic time warping loss that is calculated by dynamic programming.
@@ -178,8 +178,8 @@ Rezende, Chen, Ziegler 通过使用标准化流增强先验和后验分布表现
 
 ### 2.3.Duration Prediction in Non-Autoregressive Text-to-Speech·非自回归文本转语音中的时长预测
 
-> Autoregressive TTS models ([VoiceLoop (2017.07)](../2017.07_VoiceLoop/2017.07_VoiceLoop.md); [Tacotron../Acoustic/2017.12_Tacotron2.mdcotron2.md); [Flowtron (2021)](../2020.05../../Papers/2020.05_Flowtron/2020.05_Flowtron.mde diverse speech with different rhythms through their autoregressive structure and several tricks including maintaining dropout probability during inference and priming ([Generating sequences with recurrent neural networks]()).
-> Parallel TTS models ([FastSpeech (2019)](../AV1_Acoustic/2019.05.22_FastSpeech.md); [ParaNet (2020)](); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md); [FastSpeech 2s (2020)](../../Papers/2019.05../Acoustic/2020.06_FastSpeech2.md(../2021.01_BVAE-TTS/2021.01_BVAE-TTS.md)), on the other hand, have been relied on deterministic duration prediction.
+> Autoregressive TTS models ([VoiceLoop (2017.07)](); [Tacotron](../Acoustic/2017.12_Tacotron2.md)); [Flowtron (2021)]() diverse speech with different rhythms through their autoregressive structure and several tricks including maintaining dropout probability during inference and priming ([Generating sequences with recurrent neural networks]()).
+> Parallel TTS models ([FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md); [ParaNet (2020)](); [Glow-TTS (2020)](../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md); [FastSpeech 2s (2020)](../../Papers/2019.05../Acoustic/2020.06_FastSpeech2.md(../2021.01_BVAE-TTS/2021.01_BVAE-TTS.md)), on the other hand, have been relied on deterministic duration prediction.
 > It is because parallel models have to predict target phoneme duration or the total length of target speech in one feed-forward path, which makes it hard to capture the correlated joint distribution of speech rhythms.
 > In this work, we suggest a flow-based stochastic duration predictor that learns the joint distribution of the estimated phoneme duration, resulting in the generation of diverse speech rhythms in parallel.
 
@@ -212,7 +212,7 @@ Rezende, Chen, Ziegler 通过使用标准化流增强先验和后验分布表现
 **VITS** 可以表示为一个条件自编码器, 其目标是最大化难以处理的数据的边际分布对数似然 $\log p_{\theta}(x|c)$ 的变分下界, 也称为证据下界 (Evidence Lower BOund, ELBO).
 
 $$
-  \log p_{\theta}(x|c) \geq \mathbb{E}_{q_{\phi}(z|x)}\left[\log p_{\theta}(x|z)-\log\dfrac{q_{\phi}(z|x)}{p_{\theta}(z|c)}\right] \tag{1}
+  \log p_{\theta}(x|c) \geq E_{q_{\phi}(z|x)}\left[\log p_{\theta}(x|z)-\log\dfrac{q_{\phi}(z|x)}{p_{\theta}(z|c)}\right] \tag{1}
 $$
 
 > where $p_{\theta}(z|c)$ denotes a prior distribution of the latent variables $z$ given condition $c$, 
@@ -238,7 +238,7 @@ $$
 然后, 我们使用预测的和目标的梅尔频谱之间的 $L_1$ 损失作为重构损失:
 
 $$
-  L_{recon}= \|x_{mel}−\hat{x}_{mel}\|_1 \tag{2}
+  Loss_{recon}= \|x_{mel}−\hat{x}_{mel}\|_1 \tag{2}
 $$
 
 > This can be viewed as maximum likelihood estimation assuming a Laplace distribution for the data distribution and ignoring constant terms. 
@@ -248,7 +248,7 @@ $$
 > We define the reconstruction loss in the mel-spectrogram domain to improve the perceptual quality by using a mel-scale that approximates the response of the human auditory system. 
 > Note that the mel-spectrogram estimation from a raw waveform does not require trainable parameters as it only uses STFT and linear projection onto the mel-scale. 
 > Furthermore, the estimation is only employed during training, not inference. 
-> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)).
+> In practice, we do not upsample the whole latent variables $z$ but use partial sequences as an input for the decoder, which is the windowed generator training used for efficient end-to-end training ([FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)).
 
 我们在梅尔频谱域中定义了重构损失, 以提高感知质量, 因为它使用一个近似人类听觉系统响应的梅尔刻度.
 注意, 从原始波形估计梅尔频谱不需要可训练参数, 因为它只使用短时傅里叶变换和线性投影到梅尔刻度.
@@ -280,7 +280,7 @@ $$
 KL 散度为:
 
 $$
-  L_{kl} = \log q_{\phi}(z|x) -\log p_{\theta}(z|c_{text},A) \tag{3}
+  Loss_{kl} = \log q_{\phi}(z|x) -\log p_{\theta}(z|c_{text},A) \tag{3}
 $$
 
 $$
@@ -390,7 +390,7 @@ return path
 #### 3.2.2.Duration Prediction from Text·文本中的时长预测
 
 > We can calculate the duration of each input token $d_i$ by summing all the columns in each row of the estimated alignment $\sum_j A_{i,j}$. 
-> The duration could be used to train a deterministic duration predictor, as proposed in previous work ([HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md)), but it cannot express the way a person utters at different speaking rates each time. 
+> The duration could be used to train a deterministic duration predictor, as proposed in previous work ([HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md)), but it cannot express the way a person utters at different speaking rates each time. 
 > To generate human-like rhythms of speech, we design a stochastic duration predictor so that its samples follow the duration distribution of given phonemes. 
 > The stochastic duration predictor is a flow-based generative model that is typically trained via maximum likelihood estimation.
 > The direct application of maximum likelihood estimation, however, is difficult because the duration of each input phoneme is 
@@ -405,7 +405,7 @@ return path
 1. 一个离散整数, 这需要对其去量化以便使用连续标准化流,
 2. 一个标量, 由于可逆性而阻碍了高维变换.
 
-> We apply variational dequantization ([Flow++ (2019)](../../Papers/2019.02_Flowpp/2019.02_Flowpp.md)) and variational data augmentation ([VFlow (2020)](../2020.02_VFlow/2020.02_VFlow.md)) to solve these problems. 
+> We apply variational dequantization ([Flow++ (2019)](../_tmp/2019.02_Flowpp.md)) and variational data augmentation ([VFlow (2020)](../2020.02_VFlow/2020.02_VFlow.md)) to solve these problems. 
 > To be specific, we introduce two random variables $u$ and $ν$, which have the same time resolution and dimension as that of the duration sequenced, for variational dequantization and variational data augmentation, respectively. 
 > We restrict the support of $u$ to be $[0, 1)$ so that the difference $d−u$ becomes a sequence of positive real numbers, and we concatenate $ν$ and $d$ channel-wise to make a higher dimensional latent representation. 
 > We sample the two variables through an approximate posterior distribution $q_{\phi}(u, ν|d, c_{text})$. 
@@ -418,13 +418,13 @@ return path
 最后得到的目标是音素时长的对数似然的变分下界:
 
 $$
-  \log p_{\theta}(d|c_{text}) \geq \mathbb{E}_{q_{\phi}(u, ν|d, c_{text})} \left[\log\dfrac{p_{\theta}(d-u,v|c_{text})}{q_{\phi}(u,v|d,c_{text})}\right]\tag{7}
+  \log p_{\theta}(d|c_{text}) \geq E_{q_{\phi}(u, ν|d, c_{text})} \left[\log\dfrac{p_{\theta}(d-u,v|c_{text})}{q_{\phi}(u,v|d,c_{text})}\right]\tag{7}
 $$
 
-> The training loss $L_{dur}$ is then the negative variational lower bound. 
+> The training loss $Loss_{dur}$ is then the negative variational lower bound. 
 > We apply the stop gradient operator ([Neural discrete representation learning]()), which prevents back-propagating the gradient of inputs, to the input conditions so that the training of the duration predictor does not affect that of other modules.
 
-训练损失 $L_{dur}$ 则是负变分下界.
+训练损失 $Loss_{dur}$ 则是负变分下界.
 我们应用对输入条件应用停止梯度算子 (防止梯度反向传播) 以便训练时长预测器不影响其他模块.
 
 > The sampling procedure is relatively simple; the phoneme duration is sampled from random noise through the inverse transformation of the stochastic duration predictor, and then it is converted to integers.
@@ -441,9 +441,9 @@ $$
 
 $$
 \begin{align}
-  L_{adv}(D) &= \mathbb{E}_{(y,z)} [(D(y)-1)^2 + (D(G(z)))^2]\tag{8}\\
-  L_{adv}(G) &= \mathbb{E}_{z} [(D(G(z)) - 1)^2]\tag{9}\\
-  L_{fm}(G) &= \mathbb{E}_{(y,z)} \left[\sum_{l=1}^T \dfrac{1}{N_l}\| D^l(y)-D^l(G(z))\|_1\right]\tag{10}
+  Loss_{adv}(D) &= E_{(y,z)} [(D(y)-1)^2 + (D(G(z)))^2]\tag{8}\\
+  Loss_{adv}(G) &= E_{z} [(D(G(z)) - 1)^2]\tag{9}\\
+  Loss_{fm}(G) &= E_{(y,z)} \left[\sum_{l=1}^T \dfrac{1}{N_l}\| D^l(y)-D^l(G(z))\|_1\right]\tag{10}
 \end{align}
 $$
 
@@ -462,7 +462,7 @@ $$
 通过对 VAE 和 GAN 训练的组合, 我们的条件 VAE 的总损失可以表示如下:
 
 $$
-  L_{vae} = L_{recon} + L_{kl} + L_{dur} + L_{adv}(G) + L_{fm}(G) \tag{11}
+  Loss_{vae} = Loss_{recon} + Loss_{kl} + Loss_{dur} + Loss_{adv}(G) + Loss_{fm}(G) \tag{11}
 $$
 
 ### 3.5.Model Architecture·模型架构
@@ -484,7 +484,7 @@ $$
 
 #### 3.5.1.Posterior Encoder·后验编码器
 
-> For the posterior encoder, we use the non-causal WaveNet residual blocks used in [WaveGlow (2018)](../AV2_Vocoder/2018.10_WaveGlow.md) and [Glow-TTS (2020)](../2020.05_Glow-TTS/../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md
+> For the posterior encoder, we use the non-causal WaveNet residual blocks used in [WaveGlow (2018)](../TTS3_Vocoder/2018.10.31_WaveGlow.md) and [Glow-TTS (2020)](../2020.05_Glow-TTS/../../Papers/2020.05_Glow-TTS/2020.05_Glow-TTS.md
 > A WaveNet residual block consists of layers of dilated convolutions with a gated activation unit and skip connection. 
 > The linear projection layer above the blocks produces the mean and variance of the normal posterior distribution. 
 > For the multi-speaker case, we use global conditioning (Oord et al., 2016) in residual blocks to add speaker embedding.
@@ -540,7 +540,7 @@ class PosteriorEncoder(nn.Module):
 #### 3.5.2.Prior Encoder·先验编码器
 
 > The prior encoder consists of a text encoder that processes the input phonemes $c_{text}$ and a normalizing flow $f_{\theta}$ that improves the flexibility of the prior distribution.
-> The text encoder is a [transformer](../_Basis/2017.06_Transformer.md) encoder  that uses [relative positional representation](Self-Attention with Relative Position Representations) instead of absolute positional encoding.
+> The text encoder is a [transformer](../_Basis/2017.06.12_Transformer.md) encoder  that uses [relative positional representation](Self-Attention with Relative Position Representations) instead of absolute positional encoding.
 > We can obtain the hidden representation $h_{text}$ from $c_{text}$ through the text encoder and a linear projection layer above the text encoder that produces the mean and variance used for constructing the prior distribution.
 
 先验编码器由一个用于处理输入音素的文本编码器和一个用于提升先验分布灵活性的标准化流组成.
@@ -646,7 +646,7 @@ class ResidualCouplingBlock(nn.Module):
 
 #### 3.5.3.Decoder·解码器
 
-> The decoder is essentially the [HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md) V1 generator.
+> The decoder is essentially the [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) V1 generator.
 > It is composed of a stack of transposed convolutions, each of which is followed by a multi-receptive field fusion module (MRF).
 > The output of the MRF is the sum of the output of residual blocks that have different receptive field sizes.
 > For the multi-speaker setting, we add a linear layer that transforms speaker embedding and add it to the input latent variables $z$.
@@ -720,8 +720,8 @@ class Generator(torch.nn.Module):
 
 #### 3.5.4.Discriminator·判别器
 
-> We follow the discriminator architecture of the multi-period discriminator proposed in [HiFi-GAN (2020)](../AV2_Vocoder/2020.10.12_HiFi-GAN.md).
-> The multi-period discriminator is a mixture of Markovian window-based sub-discriminators ([MelGAN (2019)](../AV2_Vocoder/2019.10.08_MelGAN.md)), each of which operates on different periodic patterns of input waveforms.
+> We follow the discriminator architecture of the multi-period discriminator proposed in [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
+> The multi-period discriminator is a mixture of Markovian window-based sub-discriminators ([MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md)), each of which operates on different periodic patterns of input waveforms.
 
 我们遵循 HiFi-GAN 提出的多周期判别器的架构.
 多周期判别器是一个由马尔可夫窗口子判别器组成的混合模型, 它们分别操作于输入波形的不同周期模式.
@@ -906,7 +906,7 @@ FFT 大小, 窗口大小和跳跃大小分别设置为 1024, 1024 和 256.
 
 > The networks are trained using the [AdamW optimizer](../Optimizers/2017.11_AdamW.md) with $\beta_1= 0.8$, $\beta_2=0.99$ and weight decay $\lambda = 0.01$.
 > The learning rate decay is scheduled by a 0.9991/8 factor in every epoch with an initial learning rate of $2\times 10^{−4}$.
-> Following previous work ([FastSpeech 2s (2020)](../AV1_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)), we adopt the windowed generator training, a method of generating only a part of raw waveforms to reduce the training time and memory usage during training.
+> Following previous work ([FastSpeech 2s (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [EATS (2020)](../../Papers/2020.06_EATS/2020.06_EATS.md)), we adopt the windowed generator training, a method of generating only a part of raw waveforms to reduce the training time and memory usage during training.
 > We randomly extract segments of latent representations with a window size of 32 to feed to the decoder instead of feeding entire latent representations and also extract the corresponding audio segments from the ground truth raw waveforms as training targets.
 > We use mixed precision training on 4 NVIDIA V100 GPUs.
 > The batch size is set to 64 per GPU and the model is trained up to 800k steps.
